<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_icon_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_trending"
          android:icon="@drawable/ic_icon_home"
          android:title="@string/title_catagory"/>
    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_icon_camera"
        android:title="@string/title_upload"
        />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_icon_follow"
        android:title="@string/title_followers" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_icon_notification"
        android:title="@string/title_notifications" />

</menu>
