<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/colorPrimaryDark"
    android:weightSum="10">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:contentDescription="@string/Back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/ic_icon_back"
        android:id="@+id/btnBack"
        android:padding="@dimen/activity_vertical_margin"
        />
    </LinearLayout>

    <TextView
        android:id="@+id/tvActionBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/title_activity_register"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_weight="7"
        />

    <LinearLayout
        android:layout_width="37dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center">

        <ImageView
            android:contentDescription="@string/Options"
            android:id="@+id/btnDoneRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_icon_save_done"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>