<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:gravity="center"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:gravity="center_vertical"
       android:foregroundGravity="center_vertical"
       >
    <TextView
        android:visibility="gone"
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@android:color/holo_red_light"
        android:layout_margin="@dimen/toolbar_elevation"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"
        android:id="@+id/ll1"
        android:background="@android:color/white">

        <Spinner
            android:id="@+id/spinnerLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="-6dp"
            android:layout_marginLeft="-6dp"
            android:dropDownWidth="match_parent"
            android:prompt="@string/title_country"
            android:textColor="#252525"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
        <requestFocus/>
    </LinearLayout>

        <EditText
            style="@style/CustomEditTextStyle"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:textColorHint="#d1d1d1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/title_mobilenumber"
            android:maxLength="10"
            android:id="@+id/etLPhoneNO"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginLeft="@dimen/activity_vertical_margin"
           android:layout_marginRight="@dimen/activity_vertical_margin"
           android:gravity="center_vertical"
          >
           <EditText
               style="@style/CustomEditTextStyle"
               android:ems="10"
               android:inputType="textPassword"
               android:hint="@string/title_password"
               android:id="@+id/etLPassword"
               android:labelFor="@+id/etLPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
       </LinearLayout>
       <Button
           android:layout_width="match_parent"
           android:layout_height="48dp"
           android:layout_margin="@dimen/activity_vertical_margin"
           android:background="@color/bottombarbackground"
           android:text="@string/login"
           android:textColor="@android:color/white"
            android:id="@+id/btnSignIn"
           />
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/activity_vertical_margin"
           android:layout_marginRight="@dimen/activity_vertical_margin"
           android:text="@string/forgot_pw"
           android:textColor="@color/bottombarbackground"
           android:background="@android:color/transparent"
           android:textSize="12sp"
           android:id="@+id/btnForgotPW"
           android:onClick="OnForgotPasswordClicked"
           />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_gravity="center_horizontal"
           android:gravity="center_horizontal"
           android:layout_margin="@dimen/activity_vertical_margin">

           <View
               android:layout_width="32dp"
               android:layout_height="0.5dp"
               android:layout_gravity="center"
               android:layout_marginRight="4dp"
               android:background="#6F6F6F"
               android:layout_marginEnd="4dp" />
           <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/or"
          android:layout_gravity="center_horizontal"
          android:textSize="11sp"
          />

           <View
               android:layout_width="32dp"
               android:layout_height="0.5dp"
               android:layout_gravity="center"
               android:layout_marginLeft="4dp"
               android:background="#6F6F6F"
               android:layout_marginStart="4dp" />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_marginLeft="@dimen/activity_vertical_margin"
           android:layout_marginRight="@dimen/activity_vertical_margin">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/no_account"
               android:textSize="12sp"
               android:padding="4dp"
               tools:ignore="RtlSymmetry" />

           <Button
               android:id="@+id/btnLSgnUP"
               android:onClick="OnSignUpFromLogin"
               android:padding="2dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@android:color/transparent"
               android:text="@string/signup"
               android:textColor="@color/bottombarbackground"
               android:textSize="12sp" />
       </LinearLayout>
   </LinearLayout>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@color/gray_50"
        android:visibility="visible" />
</RelativeLayout>