<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:foregroundGravity="center_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:id="@+id/ll1"
            android:background="@android:color/white">
            <Spinner
                android:prompt="@string/title_country"
                android:textColor="#252525"
                android:textSize="14sp"
                android:id="@+id/spinnerFPW"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:dropDownWidth="match_parent"
                tools:ignore="RtlSymmetry"
                 />
            <requestFocus/>
        </LinearLayout>
    <LinearLayout

        android:layout_marginLeft="@dimen/toolbar_elevation"
        android:layout_marginRight="@dimen/toolbar_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <EditText
            style="@style/CustomEditTextStyle"
             android:textColorHint="#d1d1d1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/title_mobilenumber"
            android:maxLength="10"
            android:id="@+id/etPhoneFPW"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/toolbar_elevation"
            android:layout_marginRight="@dimen/toolbar_elevation"
            android:gravity="center_vertical"
            >
            <TextView
                android:inputType="textEmailAddress"
                android:hint="@string/title_email"
                android:id="@+id/etEmailFPW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:onClick="onSubmitPhoneNumberClosed"
            android:letterSpacing="0.2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@color/bottombarbackground"
            android:text="@string/forgotPW_btn"
            android:textColor="#000000"
            android:id="@+id/btnForgotPassword" />

    </LinearLayout>

